# sfap

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  LICENSE  README.md  config.h.in  config.hpp.in
.github/workflows/: ci.yml
cert/: cert.pem  key.pem
cmake/: doxygen.cmake  platform.cmake  sanitizers.cmake
include/sfap/: error.hpp  test.hpp
include/sfap/net/: address.hpp  address_kind.hpp  detect_address_type.hpp  net.hpp  proactor.hpp  resolve.hpp  socket.hpp  types.hpp
include/sfap/net/platform/: iouring.hpp
include/sfap/utils/: buffer.hpp  expected.hpp  ringbuffer.hpp  string.hpp  task.hpp
scripts/: generate-test-certificates.sh  http-proxy-server.py  socks5-proxy-server.py  start-proxy-servers.sh  stop-proxy-servers.sh
src/: CMakeLists.txt  error.cpp  sfap.cpp  sfap.hpp  test.cpp
src/client/: client.cpp  client.hpp  file_info.cpp  file_info.hpp  filesystem.cpp  io_state.cpp  io_state.hpp  open_file.cpp  remotefile.cpp  remotefileio.cpp  user.cpp
src/client/remote_file/: remote_file.cpp  remote_file.hpp
src/crypto/: exception.cpp  exception.hpp  hash.cpp  hash.hpp  utils.cpp  utils.hpp
src/crypto/context/: authority.cpp  certificate.cpp  context.cpp  context.hpp  context_ca.cpp  context_cert.cpp  context_pkey.cpp  private_key.cpp
src/crypto/hash/: hash.cpp  hash.hpp  wrappers.cpp
src/net/: CMakeLists.txt  address.cpp  address_kind.cpp  detect_address_type.cpp  resolve.cpp  socket.cpp  types.cpp  utils.cpp  utils.hpp
src/net/address/: address.cpp  address.hpp  detect.cpp  detect.hpp  host.cpp  host.hpp
src/net/connect/: connect.cpp  connect.hpp
src/net/dns/: dns.cpp  dns.hpp  get_address.cpp  resolve.cpp  utils.cpp  utils.hpp
src/net/iosocket/: iosocket.cpp  iosocket.hpp  recv.cpp  send.cpp
src/net/listener/: listener.cpp  listener.hpp
src/net/platform/: CMakeLists.txt  iouring.cpp
src/net/proxy/: http.cpp  proxy.cpp  proxy.hpp  socks5.cpp  socks5h.cpp
src/net/resolver/: exception.cpp  resolve.cpp  resolver.cpp  resolver.hpp
src/protocol/: protocol.hpp
src/protocol/transfer/: receive_data.cpp  receive_file.cpp  send_data.cpp  source.cpp  source.hpp  transfer.cpp  transfer.hpp
src/protocol/transfer/source/: file.cpp  file.hpp  memory.cpp  memory.hpp  source.cpp  source.hpp
src/server/: default_middleware.cpp  default_middlewares.cpp  server.cpp  server.hpp  vanilla_commands.cpp
src/server/command/: command.cpp  command.hpp
src/server/command_registry/: command_registry.cpp  command_registry.hpp
src/server/procedures/: filesystem.cpp  procedures.cpp  procedures.hpp  remotefile.cpp  user.cpp
src/server/session/: environment.cpp  session.cpp  session.hpp
src/server/virtual_filesystem/: virtual_filesystem.cpp  virtual_filesystem.hpp
src/utils/: CMakeLists.txt  buffer.cpp  crc.cpp  crc.hpp  credentials.cpp  credentials.hpp  encoding.cpp  encoding.hpp  endianess.hpp  format.cpp  format.hpp  log.cpp  log.hpp  misc.cpp  misc.hpp  ringbuffer.cpp  string.cpp  to_hex.cpp  to_hex.hpp
src/utils/firewall/: file.cpp  firewall.cpp  firewall.hpp
src/utils/magic/: magic.hpp
test/: CMakeLists.txt  client.cpp  server.cpp
tests/: CMakeLists.txt  address.cpp  connect.cpp  crc.cpp  detect_address_type.cpp  encoding.cpp  error.cpp  filesystem_movement.cpp  hash.cpp  hash_stream.cpp  host.cpp  http_proxy.cpp  init.cpp  iosocket.cpp  listener.cpp  manual_client.cpp  manual_server.cpp  resolve.cpp  ringbuffer.cpp  server.cpp  socks5_proxy.cpp  stream_io.cpp  tests.hpp.in  tls_server.cpp  tlscontext.cpp  to_hex.cpp  transfer_source_file.cpp  transfer_source_memory.cpp  virtual_filesystem.cpp
tests/net/: CMakeLists.txt  address.cpp  detect_address_kind.cpp  detect_address_type.cpp  resolve.cpp  types.cpp
tests/net/platform/: CMakeLists.txt  iouring.cpp
tests/utils/: CMakeLists.txt  buffer.cpp  string.cpp
